# eco-font

./: .gitattributes  .gitignore  API_BACKEND_SUMMARY.md  API_CLIENT_SPEC.html  API_CLIENT_SPEC.txt  API_SPEC.html  API_SPEC.txt  README.md  pyproject.toml  requirements.txt
cf_font/: README.md  pyproject.toml
cf_font/docs/: references.md  smoke_results.md
cf_font/scripts/: run_cherokee_smoke.sh
cf_font/src/cf_font/: __init__.py  cli.py  data.py  infer.py  losses.py  metrics.py  model.py  ocr.py  priors.py  render.py  report.py  train.py
cherokee_style_fusion/: README.md  pyproject.toml  requirements.txt
cherokee_style_fusion/charsets/: cherokee_demo.txt
cherokee_style_fusion/configs/: default.json
cherokee_style_fusion/scripts/: download_fonts.py  generate_candidates.py  run_inventory.py  train_autoencoder.py
cherokee_style_fusion/src/cherokee_style_fusion/: __init__.py  autoencoder.py  font_bank.py  fusion.py  metrics.py  pipeline.py  render.py
configs/: default.yaml
eco_diff/: README.md  pyproject.toml  requirements.txt
eco_diff/charsets/: cherokee.txt
eco_diff/configs/: default.yaml  diffusion.yaml
eco_diff/scripts/: smoke.sh  smoke_diffusion.sh
eco_diff/src/eco_diff/: __init__.py  cli.py  config.py  dataset.py  diffusion.py  diffusion_data.py  diffusion_model.py  evaluator.py  font_render.py  infer.py  losses.py  metrics.py  models.py  ocr.py  rules.py  sample_diffusion.py  train.py  train_diffusion.py  vectorize.py
eco_diff/tests/: test_diffusion.py  test_model.py  test_rules.py
eco_research_hangul/: DEPLOYMENT_RESOURCES.md  INFERENCE_PIPELINE_SUMMARY.md  README.md  TECH_STACK_AI_SUMMARY.md  pyproject.toml  requirements.txt
eco_research_hangul/charsets/: hangul_smoke.txt
eco_research_hangul/configs/: guided.yaml  guided_barunpen.yaml  guided_cherokee.yaml  guided_jua.yaml  guided_myeongjo.yaml  smoke.yaml
eco_research_hangul/scripts/: build_full_hangul_ttf_candidates.py  run_smoke.sh
eco_research_hangul/src/eco_research_hangul/: candidate_preview.py  cli.py  config.py  data_build.py  dataset.py  diffusion.py  guided.py  infer.py  metrics.py  model.py  render.py  report.py  train.py
eco_research_hangul/tests/: test_core.py
ecofont/: __init__.py  api.py  cli.py  dataset.py  font_io.py  image_ops.py  infer.py  metrics.py  model.py  ocr_guided.py  ocr_surrogate.py  render.py  rules.py  text_presets.py  train.py
ecofont/server/: __init__.py  api.py  font_generation_jobs.py  font_generation_runner.py  jobs.py  profiles.py  research_runner.py  schemas.py  script_sets.py  ttf_export.py
fontcrafter_lab/: README.md  pyproject.toml  requirements.txt
fontcrafter_lab/scripts/: run_cherokee_flux.sh  run_cherokee_proxy.sh
fontcrafter_lab/src/fontcrafter_lab/: __init__.py  cli.py  cma.py  elements.py  flux_pipeline.py  proxy.py  render.py  report.py
hybrid_fontgen/: .gitignore  README.md  pyproject.toml  requirements.txt
hybrid_fontgen/scripts/: run_cherokee_smoke.sh
hybrid_fontgen/src/hybrid_fontgen/: __init__.py  cli.py  data.py  infer.py  metrics.py  model.py  ocr.py  priors.py  render.py  report.py  train.py  vectorize.py
ryman/: README.md  pyproject.toml  requirements.txt
ryman/charsets/: cherokee_sample.txt  hangul_core.txt
ryman/configs/: cherokee_canonical_sample.yaml  hangul.yaml  hangul_canonical.yaml  hangul_distinct.yaml
ryman/scripts/: run_hangul_canonical_experiment.sh  run_hangul_distinct_experiment.sh  run_hangul_experiment.sh
ryman/src/ryman_font/: __init__.py  cli.py  config.py  data.py  infer.py  losses.py  metrics.py  model.py  pseudo.py  render.py  report.py  train.py  vectorize.py
ryman/tests/: test_core.py
scripts/: setup_env.sh  smoke_test.sh
