[project]
name = "eco-font-lab"
version = "0.1.0"
description = "Glyph-to-EcoMask training and inference pipeline for ink-saving font experiments."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=9.0",
  "opencv-python>=4.8",
  "fonttools>=4.40",
  "torch>=2.0",
  "tqdm>=4.60",
  "fastapi>=0.100",
  "uvicorn>=0.20",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0",
]

[project.scripts]
ecofont = "ecofont.cli:main"

[tool.setuptools.packages.find]
include = ["ecofont*"]
