[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cf-font-eco"
version = "0.1.0"
description = "CF-Font content-fusion eco font generation experiments for Cherokee glyphs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fonttools>=4.50",
  "numpy>=1.24",
  "opencv-python>=4.8",
  "Pillow>=9.0",
  "torch>=2.0",
  "tqdm>=4.66",
]

[project.scripts]
cf-font-eco = "cf_font.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
